# ChangeLog for media-plugins/gst-plugins-meta
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-meta/ChangeLog,v 1.25 2009/05/13 19:06:14 ssuominen Exp $

*gst-plugins-meta-0.10-r3 (13 May 2009)

  13 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  +gst-plugins-meta-0.10-r3.ebuild:
  USE flags lame and taglib.

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  arm/sh stable wrt #232054

  23 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  Stable for HPPA (bug #232054).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> ChangeLog:
  x86 stable, bug #229709

  08 Aug 2008; Markus Meier <maekke@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  x86 stable, bug #232054

  07 Aug 2008; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Stable on alpha, bug #232054

  07 Aug 2008; Tobias Klausmann <klausman@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  Stable on alpha, bug #232054

  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  31 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  ia64/sparc stable wrt #232054

  01 Aug 2008; Brent Baude <ranger@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  Marking gst-plugins-meta-0.10-r2 ppc64 stable for bug 232054

  30 Jul 2008; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking gst-plugins-meta-0.10-r2 ppc stable for bug 229709

  30 Jul 2008; Brent Baude <ranger@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  Marking gst-plugins-meta-0.10-r2 ppc stable for bug 232054

  26 Jul 2008; Olivier Crête <tester@gentoo.org>
  gst-plugins-meta-0.10-r2.ebuild:
  Stable on amd64, bug #232054

  22 May 2008; Markus Rothe <corsair@gentoo.org>
  gst-plugins-meta-0.10-r1.ebuild: