@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/gst-plugins-meta
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-meta/ChangeLog,v 1.25 2009/05/13 19:06:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-meta/ChangeLog,v 1.26 2009/08/11 09:51:43 ssuominen Exp $
+
+  11 Aug 2009; Samuli Suominen <ssuominen@gentoo.org>
+  gst-plugins-meta-0.10-r2.ebuild, gst-plugins-meta-0.10-r3.ebuild:
+  Remove media-plugins/gst-plugins-fluendo-mpegdemux from deps since it's
+  moved inside gst-plugins-bad.
 
 *gst-plugins-meta-0.10-r3 (13 May 2009)
 
